@@ -8,6 +8,7 @@
 
 package org.elasticsearch.ingest.attachment;
 
+import java.util.Map;
 import org.elasticsearch.ingest.Processor;
 import org.elasticsearch.plugins.IngestPlugin;
 import org.elasticsearch.plugins.Plugin;
@@ -19,6 +20,9 @@ public class IngestAttachmentPlugin extends Plugin implements IngestPlugin {
 
     @Override
     public Map<String, Processor.Factory> getProcessors(Processor.Parameters parameters) {
-        return Collections.singletonMap(AttachmentProcessor.TYPE, new AttachmentProcessor.Factory());
+        return Map.of(
+            AttachmentProcessor.TYPE, new AttachmentProcessor.Factory(),
+            ThumbnailProcessor.TYPE, new ThumbnailProcessor.Factory()
+        );
     }
 }
